# pw_modul_13_2

./: pyproject.toml
quotes/: modelsMongoDB.py  transferDB.py
quotes/quotes/: settings.py
quotes/quotesapp/: admin.py  forms.py  models.py  urls.py  views.py
quotes/quotesapp/migrations/: 0001_initial.py  0002_alter_tag_name.py
quotes/quotesapp/templates/quotesapp/: author.html  detail.html  index.html  quote.html
quotes/users/: forms.py  views.py
quotes/users/migrations/: 0001_initial.py
quotes/users/templates/users/: profile.html  signup.html
