[tool.poetry]
name = "pw-modul-10"
version = "0.1.0"
description = ""
authors = ["Kateryna-Shylina <shylina.k.v@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
requests = "^2.32.3"
psycopg2 = "^2.9.9"
mongoengine = "^0.28.2"
pillow = "^10.4.0"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
